# photonic-logic

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CI_FIXES_SUMMARY.md  CLI_FIX_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DANTE_FIX_SUMMARY.md  GITHUB_ABOUT.md  NN.keras  OPTIMIZATION_FIX_COMPLETE.md  OPTIMIZATION_FIX_SUMMARY.md  PHOTONIC_OPTIMIZATION_FIX_ANALYSIS.md  PROJECT_CONTEXT_PROMPT.md  README.md  debug_constraints.py  environment.yml  index.html  mkdocs.yml  optimization_debug_logger.py  photonic_logic_report.json  pyproject.toml  requirements-dev.txt  run_tests.ps1  t -v --tb=short  test_absorption_debug.py  test_cascade_depth.py  test_cascade_thermal.py  test_drift_debug.py  test_final_cascade.py  test_optimized_cascade.py  test_performance.py  test_thermal_calculation.py  test_thermal_debug.py  test_thermal_direct.py  test_thermal_fix.py  test_thermal_trace.py  test_with_servers.bat
.git_disabled/: .MERGE_MSG.swo  .MERGE_MSG.swp  COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git_disabled/logs/: HEAD
.git_disabled/logs/refs/heads/: main  readme-update
.git_disabled/logs/refs/heads/fix/: physics-power-scaling-final
.git_disabled/logs/refs/remotes/origin/: HEAD  gh-pages  main  readme-update
.git_disabled/objects/pack/: pack-f51ececd50d36522834e2ceda8bf41f87275684a.idx  pack-f51ececd50d36522834e2ceda8bf41f87275684a.pack  pack-f51ececd50d36522834e2ceda8bf41f87275684a.rev
.git_disabled/refs/heads/: readme-update
.git_disabled/refs/heads/fix/: physics-power-scaling-final
.git_disabled/refs/remotes/origin/: gh-pages  main
.git_disabled/refs/tags/: v2.3.0
.github/workflows/: ci.yml  gh-pages.yml
.hypothesis/constants/: 012079bedd611bc0  03ab1e6e6bb21915  0400f13528d45255  0885a76cb297c579  0bf95a193697c45b  0c7164ea69775f90  11f7f1e58f855e68  132190cdaa01d1cc  138be2f871d5f023  1715e5c01c5fbaf8  17306278c74a0b7f  1c91dc951625f406  1f1b07b59a233d84  1fef50e9e1564f86  2445df8961183aa0  24fc5ae58208a25f  26ad76f8e8361a62  2c510cecbc6aef88  2f2b67ed264540fb  30d8f64c874b5465  317d4461a4c8f165  384286760400e6b9  3aace875fd7263ef  3b537bb106928bc0  3d0fd6c62788d20b  407e4fc9d80d5c9d  40affcdc29c439db  417b39d58d0e3e83  429d597b3c445780  43aae7b5132ef49f  451f0c5f8ad0fbd5  46466edcc4506991  46e9b6ebeb6a319d  4966bbe60ccbf9e0  49feb446fd9d9c36  4c69208d337c66b6  4dc224973fa2b334  4e1c6fb6023f6a0d  4ee02f0dfa8ae5c0  508b7beaa9cc791e  (+122 more)
.hypothesis/examples/04e6b3400353b141/: b2d733d143eeff16
LIMITATIONS_AND_ROADMAP/: index.html
data/reports/: truth_table.csv
data/sample/: truth_table_sample.csv
docs/: LIMITATIONS_AND_ROADMAP.md  guide_v2.2.md
examples/: demo_fanout_hybrid.py  photonic_logic_test_v11.py
guide_v1.1_annotated/: index.html
guide_v2.2/: index.html
lc_mcp_app/tools/: registry.py
mcp_agent/: server.py
mcp_agent/observability/: logging.py
notebooks/: Example_Analysis.ipynb
photonic-logic/: README.md  pyproject.toml  requirements.txt
photonic-logic/.git_disabled/: COMMIT_EDITMSG  config  index  packed-refs
photonic-logic/.git_disabled/logs/: HEAD
photonic-logic/.git_disabled/objects/pack/: pack-c728e9f1c3def8b7253a2202f924cc83957153b1.idx  pack-c728e9f1c3def8b7253a2202f924cc83957153b1.pack  pack-c728e9f1c3def8b7253a2202f924cc83957153b1.rev
photonic-logic/.git_disabled/refs/heads/: main
photonic-logic/docs/: guide_v1.1_annotated.md  index.md
photonic-logic/src/plogic/: cli.py  controller.py
photonic_accelerator_l425/: result.npy
photonic_energy8/: result.npy
photonic_multi12/: result.npy
search/: search_index.json
src/plogic/: __init__.py  __main__.py  cli.py  cli_typer.py  controller.py  py.typed
src/plogic/analysis/: power.py
src/plogic/integration/: __init__.py  optics.py
src/plogic/materials/: __init__.py  database.json  hybrid.py  platforms.py
src/plogic/optimization/: __init__.py  accelerator_system.py  photonic_objectives.py
src/plogic/utils/: __init__.py  io.py  statistics.py  switching.py
tests/: conftest.py  test_api.py  test_basic.py  test_cli.py  test_cli_smoke.py  test_extinction_harmonization.py  test_fanout_hybrid.py  test_health.py  test_io_utils.py  test_mcp_conformance.py  test_mcp_contract.py  test_model_basic.py  test_physics.py  test_platforms.py  test_power_analysis.py  test_property.py  test_switching.py  test_thermal_regression.py  test_xpm_physics.py
tests/mcp_contract/: test_spec.py
(+2 files in other folders)
