[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plogic"
version = "2.2.0"
description = "Programmable Photonic Logic: control, simulation, and characterization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name = "Open Photonics Lab"}]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib"
]

[project.scripts]
plogic = "plogic.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "black>=24.3.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
src = ["src"]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.10"
pretty = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
