[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photonic-logic"
version = "2.2.0"
description = "Programmable Photonic Logic: control, simulation, and characterization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name = "Open Photonics Lab"}]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "typer",
  "rich"
]

[project.scripts]
plogic = "plogic.cli:app"

[project.urls]
Homepage = "https://github.com/grapheneaffiliate/photonic-logic"
Issues = "https://github.com/grapheneaffiliate/photonic-logic/issues"
Documentation = "https://github.com/grapheneaffiliate/photonic-logic#readme"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "black>=24.3.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
src = ["src"]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.10"
plugins = ["numpy.typing.mypy_plugin"]
strict_optional = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/fixtures/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.report]
fail_under = 80

[tool.setuptools.package-data]
plogic = ["py.typed"]
