[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61" ]

[project]
name = "photonic-logic"
version = "2.2.0"
description = "Programmable Photonic Logic: control, simulation, and characterization"
readme = "README.md"
license = { text = "MIT License" }
authors = [ { name = "Open Photonics Lab" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "rich",
  "scipy",
  "typer",
]

optional-dependencies.dev = [
  "black>=24.3",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
]
urls.Documentation = "https://github.com/grapheneaffiliate/photonic-logic#readme"
urls.Homepage = "https://github.com/grapheneaffiliate/photonic-logic"
urls.Issues = "https://github.com/grapheneaffiliate/photonic-logic/issues"
scripts.plogic = "plogic.cli:app"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.package-data]
plogic = [ "py.typed" ]

[tool.black]
line-length = 100
target-version = [ "py310" ]

[tool.ruff]
line-length = 100
src = [ "src" ]
exclude = [ "examples" ]

lint.select = [ "E", "F", "I" ]
lint.ignore = [ "E203", "E501" ]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = [ "tests" ]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [ "tests/fixtures/", "examples/" ]
explicit_package_bases = true
